wrap fixed

--- a/final/styles/general.css
+++ b/final/styles/general.css
@@ -171,6 +171,7 @@ header {
 .horizontal {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     gap: 2rem;
